<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thông tin cá nhân"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Họ tên:" />

            <EditText
                android:id="@+id/editHoten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CMND:" />

            <EditText
                android:id="@+id/editCMND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:text="Bằng cấp:" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radtc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trung cấp" />

                <RadioButton
                    android:id="@+id/radcd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caoDang" />

                <RadioButton
                    android:id="@+id/raddh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daiHoc"
                    android:checked="true" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soThich"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkdocbao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docBao" />

        <CheckBox
            android:id="@+id/chkdocsach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docSach" />

        <CheckBox
            android:id="@+id/chkdoccoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docCoding" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thongTinBoSung"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editBosung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:lines="3"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnguitt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guiThongTin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

</LinearLayout>